scripts/nullaway/original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8.txt
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/demo/PatchcaFilterDemo.java:32: error: [NullAway] initializer method does not guarantee @NonNull field img (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public PatchcaFilterDemo() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/color/RandomColorFactory.java:30: error: [NullAway] initializer method does not guarantee @NonNull field color (line 28) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public RandomColorFactory() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/SimpleCaptchaService.java:56: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:32: error: [NullAway] @NonNull field fontFactory not initialized
	protected FontFactory fontFactory;
	                      ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:33: error: [NullAway] @NonNull field wordFactory not initialized
	protected WordFactory wordFactory;
	                      ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:34: error: [NullAway] @NonNull field colorFactory not initialized
	protected ColorFactory colorFactory;
	                       ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:35: error: [NullAway] @NonNull field backgroundFactory not initialized
	protected BackgroundFactory backgroundFactory;
	                            ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:36: error: [NullAway] @NonNull field textRenderer not initialized
	protected TextRenderer textRenderer;
	                       ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/service/AbstractCaptchaService.java:37: error: [NullAway] @NonNull field filterFactory not initialized
	protected FilterFactory filterFactory;
	                        ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/TextCharacter.java:35: error: [NullAway] @NonNull field font not initialized
	private Font font;
	             ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/text/renderer/TextCharacter.java:36: error: [NullAway] @NonNull field color not initialized
	private Color color;
	              ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/ConfigurableFilterFactory.java:26: error: [NullAway] @NonNull field filters not initialized
	private List<BufferedImageOp> filters;
	                              ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/AbstractImageOp.java:36: error: [NullAway] @NonNull field hints not initialized
	protected RenderingHints hints;
	                         ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/AbstractImageOp.java:130: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			dest = createCompatibleDestImage(src, null);
			                                      ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/CurvesImageOp.java:76: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			dest = createCompatibleDestImage(src, null);
			                                      ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/DiffuseImageOp.java:29: error: [NullAway] initializer method does not guarantee @NonNull fields tx (line 25), ty (line 26) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DiffuseImageOp() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/library/MarbleImageOp.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields tx (line 26), ty (line 27) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MarbleImageOp() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/predefined/RippleFilterFactory.java:34: error: [NullAway] initializer method does not guarantee @NonNull field filters (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public RippleFilterFactory() {
	       ^
    (see http://t.uber.com/nullaway )
../original/url4913e7683c_pusuo_patchca_tgz-pJ8-org_patchca_demo_PatchcaFilterDemoPNGJ8/src/org/patchca/filter/predefined/DoubleRippleFilterFactory.java:34: error: [NullAway] initializer method does not guarantee @NonNull field filters (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DoubleRippleFilterFactory() {
	       ^
    (see http://t.uber.com/nullaway )
19 errors
